# aichecker

./: .env.template  .gitignore  agent_web_scraper.py  pyproject.toml  requirements.txt
compliance-insight-generator-main/: index.html
compliance-insight-generator-main/src/: index.css
compliance-insight-generator-main/src/components/: HeroSection.tsx  ReportDisplay.tsx  ReportGenerator.tsx
compliance-insight-generator-main/src/pages/: Index.tsx
